[gd_scene load_steps=3 format=3 uid="uid://cjcfq0d3kkj33"]

[ext_resource type="Script" path="res://MainScene/main_scene.gd" id="1_haax7"]
[ext_resource type="PackedScene" uid="uid://bcny8yb2b31m8" path="res://Logo/logo.tscn" id="1_qfjd5"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_haax7")

[node name="Logo" parent="." instance=ExtResource("1_qfjd5")]
offset_left = 224.0
offset_top = 72.0
offset_right = 336.0
offset_bottom = 120.0

[node name="StartGame" type="Button" parent="."]
offset_left = 224.0
offset_top = 144.0
offset_right = 336.0
offset_bottom = 184.0
text = "START GAME"

[node name="AudioSliders" type="Node2D" parent="."]

[node name="Master" type="HSlider" parent="AudioSliders"]
offset_left = 216.0
offset_top = 208.0
offset_right = 352.0
offset_bottom = 224.0
min_value = -50.0
max_value = 0.0

[node name="Music" type="HSlider" parent="AudioSliders"]
offset_left = 216.0
offset_top = 232.0
offset_right = 352.0
offset_bottom = 248.0
min_value = -50.0
max_value = 0.0

[node name="Effects" type="HSlider" parent="AudioSliders"]
offset_left = 216.0
offset_top = 256.0
offset_right = 352.0
offset_bottom = 272.0
min_value = -50.0
max_value = 0.0

[node name="Label" type="Label" parent="AudioSliders"]
offset_left = 144.0
offset_top = 200.0
offset_right = 199.0
offset_bottom = 226.0
text = "Master"

[node name="Label2" type="Label" parent="AudioSliders"]
offset_left = 144.0
offset_top = 248.0
offset_right = 199.0
offset_bottom = 274.0
text = "Effects
"

[node name="Label3" type="Label" parent="AudioSliders"]
offset_left = 144.0
offset_top = 224.0
offset_right = 199.0
offset_bottom = 250.0
text = "Music"

[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="value_changed" from="AudioSliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="AudioSliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="AudioSliders/Effects" to="." method="_on_effects_value_changed"]
